firstParser.py
# Generated from first.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class firstParser ( Parser ):

    grammarFileName = "first.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'PROGRAM'", "'BEGIN'", "'END'", "'STRING'", 
                     "':='", "';'", "'FLOAT'", "'INT'", "'VOID'", "','", 
                     "'FUNCTION'", "'('", "')'", "'READ'", "'WRITE'", "'RETURN'", 
                     "'+'", "'-'", "'*'", "'/'", "'IF'", "'ENDIF'", "'ELSE'", 
                     "'<'", "'>'", "'='", "'!='", "'<='", "'>='", "'WHILE'", 
                     "'ENDWHILE'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "KEYWORD", "OPERATOR", "INTLITERAL", "IDENTIFIER", 
                      "FLOATLITERAL", "STRINGLITERAL", "COMMENT", "WHITESPACE" ]

    RULE_tokens = 0
    RULE_program = 1
    RULE_id_ = 2
    RULE_pgm_body = 3
    RULE_decl = 4
    RULE_string_decl = 5
    RULE_str_ = 6
    RULE_var_decl = 7
    RULE_var_type = 8
    RULE_any_type = 9
    RULE_id_list = 10
    RULE_id_tail = 11
    RULE_param_decl_list = 12
    RULE_param_decl = 13
    RULE_param_decl_tail = 14
    RULE_func_declarations = 15
    RULE_func_decl = 16
    RULE_func_body = 17
    RULE_stmt_list = 18
    RULE_stmt = 19
    RULE_base_stmt = 20
    RULE_assign_stmt = 21
    RULE_assign_expr = 22
    RULE_read_stmt = 23
    RULE_write_stmt = 24
    RULE_return_stmt = 25
    RULE_expr = 26
    RULE_expr_prefix = 27
    RULE_factor = 28
    RULE_factor_prefix = 29
    RULE_postfix_expr = 30
    RULE_call_expr = 31
    RULE_expr_list = 32
    RULE_expr_list_tail = 33
    RULE_primary = 34
    RULE_addop = 35
    RULE_mulop = 36
    RULE_if_stmt = 37
    RULE_else_part = 38
    RULE_cond = 39
    RULE_compop = 40
    RULE_while_stmt = 41

    ruleNames =  [ "tokens", "program", "id_", "pgm_body", "decl", "string_decl", 
                   "str_", "var_decl", "var_type", "any_type", "id_list", 
                   "id_tail", "param_decl_list", "param_decl", "param_decl_tail", 
                   "func_declarations", "func_decl", "func_body", "stmt_list", 
                   "stmt", "base_stmt", "assign_stmt", "assign_expr", "read_stmt", 
                   "write_stmt", "return_stmt", "expr", "expr_prefix", "factor", 
                   "factor_prefix", "postfix_expr", "call_expr", "expr_list", 
                   "expr_list_tail", "primary", "addop", "mulop", "if_stmt", 
                   "else_part", "cond", "compop", "while_stmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    KEYWORD=32
    OPERATOR=33
    INTLITERAL=34
    IDENTIFIER=35
    FLOATLITERAL=36
    STRINGLITERAL=37
    COMMENT=38
    WHITESPACE=39

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class TokensContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(firstParser.EOF, 0)

        def getRuleIndex(self):
            return firstParser.RULE_tokens

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTokens" ):
                listener.enterTokens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTokens" ):
                listener.exitTokens(self)




    def tokens(self):

        localctx = firstParser.TokensContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tokens)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << firstParser.T__0) | (1 << firstParser.T__1) | (1 << firstParser.T__2) | (1 << firstParser.T__3) | (1 << firstParser.T__4) | (1 << firstParser.T__5) | (1 << firstParser.T__6) | (1 << firstParser.T__7) | (1 << firstParser.T__8) | (1 << firstParser.T__9) | (1 << firstParser.T__10) | (1 << firstParser.T__11) | (1 << firstParser.T__12) | (1 << firstParser.T__13) | (1 << firstParser.T__14) | (1 << firstParser.T__15) | (1 << firstParser.T__16) | (1 << firstParser.T__17) | (1 << firstParser.T__18) | (1 << firstParser.T__19) | (1 << firstParser.T__20) | (1 << firstParser.T__21) | (1 << firstParser.T__22) | (1 << firstParser.T__23) | (1 << firstParser.T__24) | (1 << firstParser.T__25) | (1 << firstParser.T__26) | (1 << firstParser.T__27) | (1 << firstParser.T__28) | (1 << firstParser.T__29) | (1 << firstParser.T__30) | (1 << firstParser.KEYWORD) | (1 << firstParser.OPERATOR) | (1 << firstParser.INTLITERAL) | (1 << firstParser.IDENTIFIER) | (1 << firstParser.FLOATLITERAL) | (1 << firstParser.STRINGLITERAL) | (1 << firstParser.COMMENT) | (1 << firstParser.WHITESPACE))) != 0):
                self.state = 84
                self.matchWildcard()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(firstParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(firstParser.Id_Context,0)


        def pgm_body(self):
            return self.getTypedRuleContext(firstParser.Pgm_bodyContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = firstParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(firstParser.T__0)
            self.state = 93
            self.id_()
            self.state = 94
            self.match(firstParser.T__1)
            self.state = 95
            self.pgm_body()
            self.state = 96
            self.match(firstParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(firstParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return firstParser.RULE_id_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_" ):
                listener.enterId_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_" ):
                listener.exitId_(self)




    def id_(self):

        localctx = firstParser.Id_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_id_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(firstParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Pgm_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(firstParser.DeclContext,0)


        def func_declarations(self):
            return self.getTypedRuleContext(firstParser.Func_declarationsContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_pgm_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPgm_body" ):
                listener.enterPgm_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPgm_body" ):
                listener.exitPgm_body(self)




    def pgm_body(self):

        localctx = firstParser.Pgm_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pgm_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.decl()
            self.state = 101
            self.func_declarations()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string_decl(self):
            return self.getTypedRuleContext(firstParser.String_declContext,0)


        def decl(self):
            return self.getTypedRuleContext(firstParser.DeclContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(firstParser.Var_declContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = firstParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_decl)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [firstParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.string_decl()
                self.state = 104
                self.decl()
                pass
            elif token in [firstParser.T__6, firstParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.var_decl()
                self.state = 107
                self.decl()
                pass
            elif token in [firstParser.T__2, firstParser.T__10, firstParser.T__13, firstParser.T__14, firstParser.T__15, firstParser.T__20, firstParser.T__21, firstParser.T__22, firstParser.T__29, firstParser.T__30, firstParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class String_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(firstParser.Id_Context,0)


        def str_(self):
            return self.getTypedRuleContext(firstParser.Str_Context,0)


        def getRuleIndex(self):
            return firstParser.RULE_string_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString_decl" ):
                listener.enterString_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString_decl" ):
                listener.exitString_decl(self)




    def string_decl(self):

        localctx = firstParser.String_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_string_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(firstParser.T__3)
            self.state = 113
            self.id_()
            self.state = 114
            self.match(firstParser.T__4)
            self.state = 115
            self.str_()
            self.state = 116
            self.match(firstParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Str_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRINGLITERAL(self):
            return self.getToken(firstParser.STRINGLITERAL, 0)

        def getRuleIndex(self):
            return firstParser.RULE_str_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStr_" ):
                listener.enterStr_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStr_" ):
                listener.exitStr_(self)




    def str_(self):

        localctx = firstParser.Str_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_str_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(firstParser.STRINGLITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(firstParser.Var_typeContext,0)


        def id_list(self):
            return self.getTypedRuleContext(firstParser.Id_listContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)




    def var_decl(self):

        localctx = firstParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.var_type()
            self.state = 121
            self.id_list()
            self.state = 122
            self.match(firstParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return firstParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)




    def var_type(self):

        localctx = firstParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not(_la==firstParser.T__6 or _la==firstParser.T__7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Any_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(firstParser.Var_typeContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_any_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAny_type" ):
                listener.enterAny_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAny_type" ):
                listener.exitAny_type(self)




    def any_type(self):

        localctx = firstParser.Any_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_any_type)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [firstParser.T__6, firstParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.var_type()
                pass
            elif token in [firstParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(firstParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(firstParser.Id_Context,0)


        def id_tail(self):
            return self.getTypedRuleContext(firstParser.Id_tailContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)




    def id_list(self):

        localctx = firstParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_id_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.id_()
            self.state = 131
            self.id_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self):
            return self.getTypedRuleContext(firstParser.Id_Context,0)


        def id_tail(self):
            return self.getTypedRuleContext(firstParser.Id_tailContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_id_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_tail" ):
                listener.enterId_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_tail" ):
                listener.exitId_tail(self)




    def id_tail(self):

        localctx = firstParser.Id_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_id_tail)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [firstParser.T__9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(firstParser.T__9)
                self.state = 134
                self.id_()
                self.state = 135
                self.id_tail()
                pass
            elif token in [firstParser.T__5, firstParser.T__12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_decl_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(firstParser.Param_declContext,0)


        def param_decl_tail(self):
            return self.getTypedRuleContext(firstParser.Param_decl_tailContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_param_decl_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl_list" ):
                listener.enterParam_decl_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl_list" ):
                listener.exitParam_decl_list(self)




    def param_decl_list(self):

        localctx = firstParser.Param_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param_decl_list)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [firstParser.T__6, firstParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.param_decl()
                self.state = 141
                self.param_decl_tail()
                pass
            elif token in [firstParser.T__12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(firstParser.Var_typeContext,0)


        def id_(self):
            return self.getTypedRuleContext(firstParser.Id_Context,0)


        def getRuleIndex(self):
            return firstParser.RULE_param_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl" ):
                listener.enterParam_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl" ):
                listener.exitParam_decl(self)




    def param_decl(self):

        localctx = firstParser.Param_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_param_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.var_type()
            self.state = 147
            self.id_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_decl_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(firstParser.Param_declContext,0)


        def param_decl_tail(self):
            return self.getTypedRuleContext(firstParser.Param_decl_tailContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_param_decl_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl_tail" ):
                listener.enterParam_decl_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl_tail" ):
                listener.exitParam_decl_tail(self)




    def param_decl_tail(self):

        localctx = firstParser.Param_decl_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_param_decl_tail)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [firstParser.T__9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.match(firstParser.T__9)
                self.state = 150
                self.param_decl()
                self.state = 151
                self.param_decl_tail()
                pass
            elif token in [firstParser.T__12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(firstParser.Func_declContext,0)


        def func_declarations(self):
            return self.getTypedRuleContext(firstParser.Func_declarationsContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_func_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_declarations" ):
                listener.enterFunc_declarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_declarations" ):
                listener.exitFunc_declarations(self)




    def func_declarations(self):

        localctx = firstParser.Func_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_func_declarations)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [firstParser.T__10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.func_decl()
                self.state = 157
                self.func_declarations()
                pass
            elif token in [firstParser.T__2]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def any_type(self):
            return self.getTypedRuleContext(firstParser.Any_typeContext,0)


        def id_(self):
            return self.getTypedRuleContext(firstParser.Id_Context,0)


        def param_decl_list(self):
            return self.getTypedRuleContext(firstParser.Param_decl_listContext,0)


        def func_body(self):
            return self.getTypedRuleContext(firstParser.Func_bodyContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)




    def func_decl(self):

        localctx = firstParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(firstParser.T__10)
            self.state = 163
            self.any_type()
            self.state = 164
            self.id_()
            self.state = 165
            self.match(firstParser.T__11)
            self.state = 166
            self.param_decl_list()
            self.state = 167
            self.match(firstParser.T__12)
            self.state = 168
            self.match(firstParser.T__1)
            self.state = 169
            self.func_body()
            self.state = 170
            self.match(firstParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(firstParser.DeclContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(firstParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_func_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_body" ):
                listener.enterFunc_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_body" ):
                listener.exitFunc_body(self)




    def func_body(self):

        localctx = firstParser.Func_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_func_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.decl()
            self.state = 173
            self.stmt_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(firstParser.StmtContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(firstParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return firstParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)




    def stmt_list(self):
